<?xml version="1.0" encoding="utf-8"?>
    <resources>
    <string name="app_name">EKot</string>
    <string name="titre_RendezVous">Make an appointment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">FAQ</string>
    <string name="title_section3">Permanence</string>
    <string name="title_section4">Contact</string>
    <string name="textAccueil">Welcome on our application EKot!</string>
    <string name="textPermanence">Our team is available weekly in solving problems
                            hardware and software.</string>
    <string name="buttonRendezVous">Make an appointmen!</string>
    <string name="textHeurePerma">this week, the permanence will permanently Wednesday from 18 to 20h</string>
    <string name="textTitreContact">Where to find us and how to contact us?</string>
    <string name="titreKot">Directly at E-Kot:</string>
    <string name="adresseKot">1, Quai Ferdinand Courtois - 5000 Namur</string>
    <string name="titreCercle">At circle info:</string>
    <string name="adresseCercle">22, rue Grandgagnage - 5000 Namur</string>
    <string name="contactEmailTel">By phone or email:</string>
    <string name="titreFAQ">Frequently Asked Questions:</string>
    <string name="titreAccueil">A problem with your computer or your connection?</string>
    <string name="descriptionAccueilFAQ">- See , first, the FAQ . You will find a solution to the basic problems.</string>
    <string name="descriptionAccueilPerma">- Can not find answers to your problem ? \ n Do not panic! :) \ n Check the schedule of our permanences or take appointments directly for convenience!</string>
    <string name="nomRendezVous">Enter your name</string>
    <string name="prenomRendezVous">Enter your first name</string>
    <string name="numTel">Enter your mobile phone</string>
    <string name="adresseMail">Enter your e-mail</string>
    <string name="buttonRdv">Subscribe</string>
    <string name="textRdv">Subscribe to permanence</string>
    <string name="textLoginAdmin">This part is reserved for the administration!</string>
    <string name="usernameAdmin">Username</string>
    <string name="passwordAdmin">Password</string>
    <string name="buttonLogAdmin">Log in</string>
    <string name="problem">Your problem</string>
</resources>
