<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/adresseMail"
        android:ems="10"
        android:id="@+id/adresseMail"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="@string/numTel"
        android:ems="10"
        android:id="@+id/numTel"
        android:layout_above="@+id/adresseMail"
        android:layout_alignStart="@+id/adresseMail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/prenomRendezVous"
        android:ems="10"
        android:id="@+id/prenomRendezVous"
        android:layout_above="@+id/nomRendezVous"
        android:layout_alignStart="@+id/nomRendezVous" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nomRendezVous"
        android:ems="10"
        android:id="@+id/nomRendezVous"
        android:layout_above="@+id/numTel"
        android:layout_alignStart="@+id/numTel" />

</RelativeLayout>